Revert "after-class changes"

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
+/node_modules
 /Artster/node_modules
-/Artster/package-lock.json
 /Jokester/node_modules
-/Jokester/package-lock.json
+/LangGuessr/node_modules
